fix: horizontal scroll on windows

--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -1,5 +1,5 @@
 .background-img {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   object-fit: cover;
   position: absolute;
@@ -10,7 +10,7 @@
 }
 
 .background-img-text {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: absolute;
   top: 0;
