--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .page-footer {
-  width: 100vw;
+  width: 100%;
   height: 60vh;
   display: flex;
   justify-content: center;
