--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -18,7 +18,7 @@
   background-color: rgb(254 248 250 / 50%) !important;
   position: fixed;
   top: 0;
-  width: 100vw;
+  width: 100%;
   z-index: 5;
 }
 
